# manufacturing-information-system

./: .env.example  .gitignore  .npmrc  .pylintrc  AGENTS.md  LICENSE  README.md  biome.json  orval.config.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  SUPPORT.md  copilot-instructions.md  dependabot.yml  pull_request_template.md  release.yml
backend/: README.md  asgi.py  dramatiq_config.py  logging_config.py  manage.py  middleware.py  routing.py  settings.py  urls.py  wsgi.py
docs/: administration.md  architecture.md  data-platform.md  deployment.md  domain-model.md  operations.md  permission-matrix.md  security.md
frontend/: README.md  components.json  index.html  package.json  schema.json
scripts/: backup_postgres.sh  check_chart_safe_property_access.mjs  check_contract.sh  check_frontend_dependencies.mjs  check_i18n_literals.mjs  check_jsx_dom_spread.mjs  check_ui_safe_rendering.mjs  check_zod_mutation_guards.mjs  debug_schema.py  export_schema.py  fix_lints.py  fix_lints_2.py  fix_prod_services.py  fix_task_md.py  frontend_wsgi.py  normalize_generated.py  patch_api_fin.py  patch_api_inv.py  patch_api_prod.py  patch_finance_services.py  patch_finance_services_2.py  patch_inv_services.py  patch_paraglide_security.d.mts  patch_paraglide_security.mjs  patch_prod_services.py  scratch_api_prod.py  scratch_prod_services.py  seed_dummy_data.py  test_cap.py  test_flow_bisnis.py  test_paraglide_runtime_security.mjs  test_schema.py  (+2 more)
(+337 files in other folders)
